fix (editor) play-step button alignment

--- a/packages/selenium-ide/src/neo/components/TestRow/style.css
+++ b/packages/selenium-ide/src/neo/components/TestRow/style.css
@@ -173,12 +173,32 @@
   opacity: 1;
 }
 
-.playStep {
+.play-step {
   min-width: 10px;
   max-width: 10px;
   margin-right: 20px;
+  font-size: 20px;
+  display: inline-block;
 }
 
-.playStep:active {
-  transform: scale(1.5)
+.play-step:active {
+  transform: scale(1.25);
+}
+
+.row-name-container {
+  position: relative;
+  bottom: 5px;
+  display: inline-block;
+}
+
+.row-target-container {
+  position: relative;
+  top: 6px;
+  display: inline-block;
+}
+
+.row-value-container {
+  position: relative;
+  top: 6px;
+  display: inline-block;
 }
